hello world for button click

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,13 @@
   </head>
 
   <body>
+    <button id="hello" type="button">Say Hello!</button>
+    <script type="text/javascript">
+      document.getElementById('element').onclick = function(e) {
+        alert('Hello World!');
+      }
+    </script>
     <%= yield %>
   </body>
+
 </html>
