Fixes hello world

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <body>
     <button id="hello" type="button">Say Hello!</button>
     <script type="text/javascript">
-      document.getElementById('element').onclick = function(e) {
+      document.getElementById('hello').onclick = function(e) {
         alert('Hello World!');
       }
     </script>
