adds style elements to the page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,59 @@
  *= require_tree .
  *= require_self
  */
+
+#title {
+   font-size: 80px; /* px means 'pixels': the base font size is now 10 pixels high  */
+   font-family: 'Monoton', sans-serif;
+}
+
+h2 {
+  font-size: 30px;
+  font-family: 'Arimo';
+}
+
+li {
+  margin-top: 10px;
+  border: solid;
+  border-width: thin thin thin medium;
+  list-style: none;
+  height: 300px;
+  width: 600px;
+  align-items: right;
+  background-color: black;
+  color: white;
+  ;
+}
+li button {
+  align-items: right;
+}
+
+p {
+  margin: 0;
+  text-align: center;
+}
+.clock p:nth-child(1) {
+  /*text-align: center;*/
+  margin-top: 1em;
+  margin-bottom: .3em;
+  font-size: 60px;
+  font-family: 'Orbitron';
+}
+
+.clock p:nth-child(2) {
+  font-size: 30px;
+  font-family: 'Electrolize';
+}
+
+.clock p:nth-child(3) {
+  font-size: 20px;
+  font-family: 'Play';
+}
+
+.clock p:nth-child(4) {
+  font-size: 15px;
+  font-family: 'Play';
+}
+/*p {
+  color: red;
+}*/
