sets up final stage in iteration, will come back and refactor

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,14 +30,14 @@
                         'Orbitron', 'Playfair Display SC', 'Gudea', 'Monoton', 'Jura',
                         'Electrolize', 'Marcellus SC', 'Leckerli One', 'Handlee', 'Limelight'];
       let fontSpan = document.getElementById('font');
-      fontNames.forEach( font => {
-        let fontP = document.createElement('p');
-        let fontFamily = ''
-        fontP.setAttribute('style', ('font-family:' + font));
-        fontP.textContent = font;
-        fontSpan.appendChild(fontP);
-
-      });
+      // fontNames.forEach( font => {
+      //   let fontP = document.createElement('p');
+      //   let fontFamily = ''
+      //   fontP.setAttribute('style', ('font-family:' + font));
+      //   fontP.textContent = font;
+      //   fontSpan.appendChild(fontP);
+      //
+      // });
 
       let clocks = [];
       let timeZonesUTCDiff = { Pacific: 8,
